# wcd

./: .gitignore  main.py  pyproject.toml  rm_venv.sh
data/scores/: en_sents_llama_3_3b.jsonl  en_sents_llama_3_70b.jsonl  en_sents_llama_3_8b.jsonl  en_sents_qwen06b.jsonl  en_sents_qwen32b.jsonl  en_sents_qwen3b.jsonl  en_sents_qwen8b.jsonl  ft_qwen06b_en_sents.jsonl  lora_llama_3_8b_en_sents.jsonl  lora_llama_3_8b_hu_sents.jsonl  lora_llama_3_8b_pl_sents.jsonl  lora_llama_3_8b_pt_sents.jsonl  lora_qwen06b_hu_sents.jsonl  lora_qwen06b_pl_sents.jsonl  lora_qwen06b_pt_sents.jsonl  lora_qwen32b_en_sents.jsonl  lora_qwen8b_en_sents.jsonl  lora_qwen8b_hu_sents.jsonl  lora_qwen8b_pl_sents.jsonl  lora_qwen8b_pt_sents.jsonl  pt_sents_llama_3_8b.jsonl  pt_sents_qwen3b.jsonl  pt_sents_qwen8b.jsonl
scripts/: test.py  test_torch.py
scripts/analysis/: cd.sh  classy.py  classy.sh  custom_head.py  eval.py  eval.sh  eval_peft.py  ft.py  ft_peft.py  ft_peft.slurm  llm.py  llm.sh  meta.json  peft_eval.py  peft_eval.sh  peft_run.py  peft_run.sh  peft_s2s.py  peft_s2s.sh  plm.py  plm.sh  plm_eval.py  plm_eval.sh  plm_hp.py  plm_hp.sh  plm_hp_eval.py  plm_hp_eval.sh  plm_hp_wandb.py  prompts.py  pwt.py  qlora.py  qlora.sh  qlora2.py  qlora2.sh  qlora_hp.py  qlora_hp.sh  qlora_us.py  slm.py  slm.sh  slm_eval.py  (+3 more)
scripts/annotation/: distil.sh  prepare_data.py  prompts.py  synthetic.py  synthetic.sh
scripts/classification/: classy.sh  plm_hp.py  plm_hp.sh  pwl.py  pwl.sh  qlora2.py  qlora2.sh  qlora2_hp.py  qlora2_hp.sh  random_hp.py  random_hp.sh  slm_icl.sh
scripts/ct/: prep_data.py
scripts/data/: README.md  aggregate.py  api_fa.py  api_random.py  api_views.py  backtrans.py  backtrans.sh  checks.py  comet_test.py  data_quality.py  fa_api.py  linguistics.py  parse.py  parse.sh  prepare_data.py  prepare_data.sh  print_article.py  proc_cn.py  raw.py  raw.sh  sents.py  sents.sh  sents2.py  shots.py  skip_sections.py  stats.py  topics.py  trans_eval.py  trans_eval.sh  translation.py  translation.sh  vi_regex.py  wiki_langs.py
scripts/ex1/: ray_hp.py  ray_hp.sh  rnd.py  rnd_acc.py  utils.py
scripts/exdata/: prep_data.py  proc_ct24.py  proc_data.py  proc_nlp4if.py
scripts/exp/: cl.py  exp1.sh  exp1_api.sh  exp1_atl.sh  exp1_clf.sh  exp1_ex.sh  exp1_job.sh  exp1_launch.sh  exp1_plm.sh  exp1_save.sh  exp1_seed.sh  exp1_size.sh  exp1_slm.sh  exp2.sh  exp2_job.sh  exp2_main.sh  exp4.sh  run.py  slurm-30332811.out  slurm-30383907.out  slurm-30383913.out  slurm-30453015.out  slurm-30488923.out  slurm-30488932.out  slurm-30700566.out  test.sh  tester.sh  tester_3.sh  (+4 more)
(+8328 files in other folders)
