[project]
name = "wcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "bs4>=0.0.2",
    "comet>=3.1.0",
    "deepl>=1.27.0",
    "editables>=0.5",
    "evaluate>=0.4.5",
    "ftfy>=6.3.1",
    "google-cloud-translate>=3.23.0",
    "hatching>=0.0.1",
    "lxml>=6.0.2",
    "mwparserfromhell>=0.7.2",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "peft>=0.17.1",
    "ray[tune]>=2.49.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=0.3.4",
    "sentencepiece>=0.2.1",
    "stanza>=1.11.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers",
    "trl>=0.22.2",
    "wandb>=0.21.1",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "main" }
